# SpreadsheetEngine_Rust_WebUI

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  index.js  report.tex  tarpaulin-report.html  tarpaulin_20250424022722.json
coverage/: tarpaulin-report.html
src/: display.rs  display_auto.rs  functions.rs  functions_auto.rs  graph.rs  graph_auto.rs  input_parser.rs  input_parser_auto.rs  lib.rs  main.rs  scrolling.rs  scrolling_auto.rs  spreadsheet.rs  spreadsheet_auto.rs
