[package]
name = "lab1_2023CS10204_2023CS10076_2023CS10186"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["wasm-bindgen"]
autograder = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/main.rs"
required-features = ["autograder"]  # Only build CLI when autograder feature is enabled

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }