[package]
name = "lab1"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = ["wasm-bindgen", "web-sys"]
autograder = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "spreadsheet"
path = "src/bin/main.rs"
required-features = ["autograder"]  # Only build CLI when autograder feature is enabled

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlElement"] }