[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "serde_json"]
autograder = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "spreadsheet"
path = "src/bin/main.rs"
required-features = ["autograder"]  # Only build CLI when autograder feature is enabled

[dependencies]
serde_json = { version = "1.0.140", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlElement"] }
